--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		My current favourite song is <a href="http://youtube.com">Naatu Naatu</a>
+
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
