--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		My current favourite song is <a href="https://youtube.com">Naatu Naatu</a>
+		My current favourite song is <a href="https://www.youtube.com/watch?v=Gt9WzC4WDEA">Naatu Naatu</a>
 
 	</div>
     <script type="text/javascript" src="./script.js">
